--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@ django-cors-headers==4.3.1
 django-environ==0.11.2
 djangorestframework-simplejwt==5.3.0
 django-filter==23.5
+setuptools<81  # pkg_resources deprecated ogohlantirishini oldini olish uchun
 
 # Database
 psycopg2-binary==2.9.9
