Complete Ngrok setup: Fix nginx.local.conf paths, add start_all.bat and stop_all.bat scripts for full automation

--- a/nginx/nginx.local.conf
+++ b/nginx/nginx.local.conf
@@ -61,14 +61,14 @@ http {
 
         # Static files (Django)
         location /static/ {
-            alias /path/to/backend/staticfiles/;
+            alias D:/coding/hr_bot/backend/staticfiles/;
             expires 30d;
             add_header Cache-Control "public, immutable";
         }
 
         # Media files (Django)
         location /media/ {
-            alias /path/to/backend/media/;
+            alias D:/coding/hr_bot/backend/media/;
             expires 7d;
             add_header Cache-Control "public";
         }
