Fix Nginx configuration for Windows: Update log paths, MIME types path, and start_all.bat to use correct nginx.exe path with -p flag

--- a/nginx/nginx.local.conf
+++ b/nginx/nginx.local.conf
@@ -3,12 +3,14 @@ events {
 }
 
 http {
-    include /etc/nginx/mime.types;
+    # MIME types - relative to nginx directory (when using -p flag)
+    include nginx-1.28.0/conf/mime.types;
     default_type application/octet-stream;
 
-    # Logging
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
+    # Logging - relative to nginx directory (when using -p flag)
+    # When -p nginx is used, paths are relative to nginx/ directory
+    access_log logs/access.log;
+    error_log logs/error.log;
 
     # Upstream servers
     upstream backend {
