--- a/nginx/nginx.local.conf
+++ b/nginx/nginx.local.conf
@@ -11,6 +11,13 @@ http {
     # When -p nginx is used, paths are relative to nginx/ directory
     access_log logs/access.log;
     error_log logs/error.log;
+    
+    # Temp directories - relative to nginx directory
+    client_body_temp_path temp/client_body_temp;
+    fastcgi_temp_path temp/fastcgi_temp;
+    proxy_temp_path temp/proxy_temp;
+    scgi_temp_path temp/scgi_temp;
+    uwsgi_temp_path temp/uwsgi_temp;
 
     # Upstream servers
     upstream backend {
