feat: Notification system with error tracking and improved .env loading
- Added Notification and NotificationError models for sending messages to Telegram users
- Implemented rich text editor (CKEditor) for composing messages in Django admin
- Added ability to send notifications to all users or selected users
- Implemented detailed error tracking for failed notification sends
- Each error is saved separately with error type and message
- Added test notification feature for single user with test results
- Improved .env file loading: now reads from root .env first, then backend/.env
- Enhanced error messages with detailed Telegram API error information
- Added ENV_SETUP.md documentation for environment variable configuration

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,7 +8,7 @@ django-filter==23.5
 setuptools<81  # pkg_resources deprecated ogohlantirishini oldini olish uchun
 
 # Database
-psycopg2-binary==2.9.9
+#psycopg2-binary==2.9.9
 
 # File handling
 python-docx==1.1.0
